[tool.poetry]
name = "implementing-han-et-al-2019"
version = "0.1.0"
description = "simple reproduction of the RL approach to HFSP"
authors = ["Adnene_wsl <adnen.guessoum@gmail.com>"]
readme = "README.md"
packages = [{include = "implementing_han_et_al_2019"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.16.2"
black = "^23.1.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pandas-stubs = "^1.5.3.230214"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100

[tool.black]
line-length=79
